[package]
name = "polar-analyzer"
version = "0.0.1"
authors = ["Oso Security, Inc. <support@osohq.com>"]
edition = "2018"

[lib]
bench = false
crate-type = ["cdylib", "rlib"]


[[bin]]
name = "polar-analyzer"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.42"
console_error_panic_hook = "0.1.6"
indoc = "1.0.3"
js-sys = "0.3.46"
lsp-server = "0.5.2"
lsp-types = "0.89.2"
polar-core = { path = "../polar-core", version = "0.14.0" }
serde = { version = "1.0.119", features = ["derive", "rc"] }
serde-wasm-bindgen = "0.2.0"
serde_json = "1.0.66"
serde_path_to_error = "0.1.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
xflags = "0.2.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.19"

[features]
default = []
