[package]
name = "polar-analyzer"
version = "0.0.1"
authors = ["Oso Security, Inc. <support@osohq.com>"]
edition = "2018"

[lib]
bench = false
crate-type = ["cdylib", "rlib"]


[[bin]]
name = "polar-analyzer"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.42"
indoc = "1.0.3"
lsp-server = "0.5.2"
lsp-types = "0.89.2"
polar-core = { path = "../polar-core", version = "0.14.0" }
serde = { version = "1.0.119", features = ["derive", "rc"] }
serde_json = "1.0.66"
serde_path_to_error = "0.1.4"
xflags = "0.2.3"

[features]
default = []
